[package]
name = "rustylog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
grok-rs = "0.1.3"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
